--- a/index.css
+++ b/index.css
@@ -11,3 +11,20 @@
 .cities_table > tbody > tr:hover {
   background-color: #f5f5f5;
 }
+
+.image_container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.home_img {
+  width: 200px;
+  height: 200px;
+  border-radius: 10%;
+}
+
+.cities_link {
+  text-decoration: none;
+  color: black;
+  font-size: 120%;
+}
